--- a/src/app/feature/components/objects/components/list/list.component.html
+++ b/src/app/feature/components/objects/components/list/list.component.html
@@ -4,15 +4,24 @@
       <label class="title text-center responsive-text">OBJETOS</label>
     </div>
     <div class="row">
-      <div class="col-sm-12 col-md-12 col-lg mb-3">
+      <div class="col-sm-12 col-md-12 col-lg-3 mb-3">
         <app-filter (searchFilters)="searchFilters($event)"></app-filter>
       </div>
-      <div class="col-lg-9 col-md-6 col-sm-12 p-0">
+      <div class="col-lg-9 col-md-12 col-sm-12 p-0">
         <ul class="row list">
-          <li class="col-sm-6 col-lg-4 mb-4" *ngFor="let object of objects">
+          <li class="col-sm-6 col-lg-4 col-md-4 mb-4" *ngFor="let object of objects">
             <div class="card">
-              <img src="../../../../../../assets/img/descarga.jpg"
-                [ngClass]="object.status == 'RECLAMADO' ? 'card-img-top' : ''" alt="..." />
+              <div class="card-icon" [ngClass]="object.status == 'RECLAMADO' ? 'card-img-top bg-claimed' : 'bg-lost'">
+                <i class="fa-solid fa-credit-card icon" *ngIf="object.type == 'Civica'"></i>
+                <i class="fa-solid fa-mobile-screen-button icon" *ngIf="object.type == 'Celular'"></i>
+                <i class="fa-solid fa-suitcase icon" *ngIf="object.type == 'Morral'"></i>
+                <i class="fa-solid fa-laptop icon" *ngIf="object.type == 'Computador'"></i>
+                <i class="fa-solid fa-id-card icon" *ngIf="object.type == 'Carnet'"></i>
+                <i class="fa-solid fa-book icon" *ngIf="object.type == 'Cuaderno'"></i>
+                <i class="fa-solid fa-key icon" *ngIf="object.type == 'Llaves'"></i>
+                <i class="fa-solid fa-shirt icon" *ngIf="object.type == 'Ropa'"></i>
+                <i class="fa-regular fa-circle-question icon" *ngIf="object.type == 'Otros'"></i>
+              </div>
               <h1 [ngClass]="object.status == 'RECLAMADO' ? 'claimed' : 'hiden'">
                 RECLAMADO
               </h1>
