--- a/src/app/feature/components/objects/components/updateobject/updateobject.component.html
+++ b/src/app/feature/components/objects/components/updateobject/updateobject.component.html
@@ -1,6 +1,6 @@
 <section id="create-object" class="container mb-5">
     <div>
-        <label class="title text-center">Objeto</label>
+        <label class="title text-center">Editar Objeto</label>
     </div>
     <div class="center-div">
         <div class="card p-4 mt-1 form-container">
