--- a/src/app/feature/components/objects/components/list/list.component.html
+++ b/src/app/feature/components/objects/components/list/list.component.html
@@ -11,7 +11,8 @@
         <ul class="row list">
           <li class="col-sm-6 col-lg-4 col-md-4 mb-4" *ngFor="let object of objects">
             <div class="card">
-              <div class="card-icon" [ngClass]="object.status == 'RECLAMADO' ? 'card-img-top bg-claimed' : 'bg-lost'">
+              <div class="card-icon" [ngClass]="object.status == 'RECLAMADO' ? 'card-img-top bg-claimed' : 'bg-lost'"
+                (click)="openObjectModal(object)">
                 <i class="fa-solid fa-credit-card icon" *ngIf="object.type == 'Civica'"></i>
                 <i class="fa-solid fa-mobile-screen-button icon" *ngIf="object.type == 'Celular'"></i>
                 <i class="fa-solid fa-suitcase icon" *ngIf="object.type == 'Morral'"></i>
@@ -22,10 +23,10 @@
                 <i class="fa-solid fa-shirt icon" *ngIf="object.type == 'Ropa'"></i>
                 <i class="fa-regular fa-circle-question icon" *ngIf="object.type == 'Otros'"></i>
               </div>
-              <h1 [ngClass]="object.status == 'RECLAMADO' ? 'claimed' : 'hiden'">
+              <h1 [ngClass]="object.status == 'RECLAMADO' ? 'claimed' : 'hiden'" (click)="openObjectModal(object)">
                 RECLAMADO
               </h1>
-              <div class="card-body" [routerLink]="['edit', object.id]">
+              <div class="card-body" (click)="openObjectModal(object)">
                 <h5 class="card-title text-center">{{ object.name }}</h5>
                 <p class="card-text">{{ object.description }}</p>
               </div>
@@ -60,13 +61,77 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <h3>¿Seguro quieres eliminar el objeto <strong>{{ objectModalValidation.name }}</strong>?</h3>
+        <h3>¿Seguro quieres eliminar el objeto asd <strong>{{ objectModalValidation.name }}</strong>?</h3>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
           Cerrar
         </button>
-        <button type="button" class="btn btn-delete" (click)="deleteObject()">
+        <button type="button" class="btn btn-delete" (click)="deleteObject(objectModalValidation.id)">
+          Eliminar
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!--Object Modal-->
+<div class="modal fade" id="objectModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title me-2" id="exampleModalLabel">{{ objectSelected.name }} </h5>
+        <span class="badge bg-warning text-dark" id="exampleModalLabel">{{ objectSelected.status }} </span>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+
+          <div class="name col-4">
+            <strong>Descripción</strong>
+          </div>
+          <div class="value col-8 mb-1">
+            <label>{{ objectSelected.description }}</label>
+          </div>
+
+          <div class="name col-4">
+            <strong>Tipo</strong>
+          </div>
+          <div class="value col-8 mb-1">
+            <label>{{ objectSelected.type }}</label>
+          </div>
+
+          <hr class="hr hr-blurry m-2" *ngIf="isReclamadoSelected()" />
+          <label class="title text-center responsive-text" *ngIf="isReclamadoSelected()">Persona que reclama el
+            objeto</label>
+          <div class="row col-12" *ngIf="isReclamadoSelected()">
+            <div class="name col-4">
+              <strong>Reclamado Por</strong>
+            </div>
+            <div class="value col-8 mb-1">
+              <label>{{ objectSelected.claimer.name }} {{ objectSelected.claimer.lastName }}</label>
+            </div>
+
+            <div class="name col-4">
+              <strong>Tipo de persona</strong>
+            </div>
+            <div class="value col-8 mb-1">
+              <label>{{ objectSelected.claimer.userType }}</label>
+            </div>
+          </div>
+          <div>
+            <label class="badge bg-secondary me-1 mt-3" *ngFor="let feature of objectSelected.features">
+              {{ feature.description }}
+            </label>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-edit" data-bs-dismiss="modal" [routerLink]="['edit', objectSelected.id]">
+          Editar
+        </button>
+        <button type="button" class="btn btn-delete" (click)="deleteObject(objectSelected.id)">
           Eliminar
         </button>
       </div>
