--- a/src/app/feature/components/users/components/listusers/listusers.component.html
+++ b/src/app/feature/components/users/components/listusers/listusers.component.html
@@ -100,7 +100,7 @@
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="openUserModel(selectedUser)">
           Cerrar
         </button>
-        <button type="button" class="btn btn-delete" (click)="deleteUser(selectedUser.id)">
+        <button type="button" class="btn btn-delete" (click)="deleteUser(selectedUser)">
           Eliminar
         </button>
       </div>
