--- a/src/app/feature/components/objects/components/create-object/create-object.component.html
+++ b/src/app/feature/components/objects/components/create-object/create-object.component.html
@@ -69,6 +69,13 @@
                             </div>
                         </div>
 
+                        <div class="col-md-6 mb-3">
+                            <div class="form-group">
+                                <label class="responsive-text">¿Cuándo se perdió?</label>
+                                <input id="startDate" class="form-control" type="date" formControlName="lostDate" />
+                            </div>
+                        </div>
+
                         <hr class="hr hr-blurry" *ngIf="object.value.status == 'RECLAMADO'" />
                         <div *ngIf="object.value.status == 'RECLAMADO'" class="row" formGroupName="claimer">
                             <div>
@@ -165,6 +172,14 @@
                                     <div class="text-danger" *ngIf="cla['userType'].invalid && submitted">
                                         Seleccione una opción
                                     </div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-6 mb-3">
+                                <div class="form-group">
+                                    <label class="responsive-text">¿Cuándo se encontró?</label>
+                                    <input id="startDate" class="form-control" type="date"
+                                        formControlName="foundDate" />
                                 </div>
                             </div>
                         </div>
