Fixes, se arreglan ciertos temas de validaciones

--- a/src/app/feature/components/users/components/updatemyuser/updatemyuser.component.html
+++ b/src/app/feature/components/users/components/updatemyuser/updatemyuser.component.html
@@ -51,7 +51,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-sm-12 mb-2">
+                    <!--<div class="col-md-6 col-sm-12 mb-2">
                         <div class="form-group">
                             <label class="responsive-text">Rol</label>
                             <select class="form-select responsive-text" formControlName="role" autocomplete="off"
@@ -106,7 +106,7 @@
                                 Contraseñas no coinciden
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                     <div class="col-md-12">
                         <div class="form-group">
                             <div class="row">
