--- a/src/app/feature/components/objects/components/list/list.component.html
+++ b/src/app/feature/components/objects/components/list/list.component.html
@@ -57,17 +57,17 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Eliminación de objeto</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Eliminación de Objeto</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <h3>¿Seguro quieres eliminar el objeto asd <strong>{{ objectModalValidation.name }}</strong>?</h3>
+        <h3>¿Seguro quieres eliminar el objeto <strong>{{ objectSelected.name }}</strong>?</h3>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+        <button type="button" class="btn btn-secondary" (click)="onValidationClose()">
           Cerrar
         </button>
-        <button type="button" class="btn btn-delete" (click)="deleteObject(objectModalValidation.id)">
+        <button type="button" class="btn btn-delete" (click)="deleteObject(objectSelected.id)">
           Eliminar
         </button>
       </div>
@@ -127,11 +127,11 @@
           </div>
         </div>
       </div>
-      <div class="modal-footer">
+      <div class="modal-footer" *ngIf="logged">
         <button type="button" class="btn btn-edit" data-bs-dismiss="modal" [routerLink]="['edit', objectSelected.id]">
           Editar
         </button>
-        <button type="button" class="btn btn-delete" (click)="deleteObject(objectSelected.id)">
+        <button type="button" class="btn btn-delete" (click)="onDelete(object)">
           Eliminar
         </button>
       </div>
