--- a/src/app/feature/components/users/components/listusers/listusers.component.html
+++ b/src/app/feature/components/users/components/listusers/listusers.component.html
@@ -90,11 +90,12 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Eliminación de objeto</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Eliminación de Usuario</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <h3>¿Seguro quieres eliminar el objeto asd <strong>{{ selectedUser.name }}</strong>?</h3>
+        <h3>¿Seguro quieres eliminar el usuario <strong>{{ selectedUser.name }} {{ selectedUser.lastName }}</strong>?
+        </h3>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="openUserModel(selectedUser)">
